--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -32,8 +32,9 @@ jobs:
         
       - name: Install dependencies
         run: | 
-          python -m pip install --upgrade pip
-          pip install -r docs/requirements.txt
+          #python -m pip install --upgrade pip
+          #pip install -r docs/requirements.txt
+          pip install -e .
       - name: Build HTML
         run: | 
           cd docs/
