--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,47 +6,22 @@ build-backend = "setuptools.build_meta"
 name = "w0sa"
 version = "0.1.0"
 requires-python = ">=3.8"
+
 dependencies = [
-	"accessible-pygments==0.0.5",
-	"alabaster==1.0.0",
-	"babel==2.17.0",
-	"beautifulsoup4==4.13.4",
-	"certifi==2025.6.15",
-	"charset-normalizer==3.4.2",
-	"contourpy==1.3.2",
-	"cycler==0.12.1",
-	"docutils==0.21.2",
-	"fonttools==4.58.0",
-	"idna==3.10",
-	"imagesize==1.4.1",
-	"Jinja2==3.1.6",
-	"kiwisolver==1.4.8",
-	"MarkupSafe==3.0.2",
-	"matplotlib==3.10.3",
-	"numpy==2.2.6",
-	"numpydoc==1.9.0",
-	"packaging==25.0",
-	"pillow==11.2.1",
-	"pydata-sphinx-theme==0.15.4",
-	"Pygments==2.19.2",
-	"pyparsing==3.2.3",
-	"python-dateutil==2.9.0.post0",
-	"requests==2.32.4",
-	"scipy==1.15.3",
-	"six==1.17.0",
-	"snowballstemmer==3.0.1",
-	"soupsieve==2.7",
-	"Sphinx==8.1.3",
-	"sphinx-book-theme==1.1.4",
-	"sphinxcontrib-applehelp==2.0.0",
-	"sphinxcontrib-devhelp==2.0.0",
-	"sphinxcontrib-htmlhelp==2.1.0",
-	"sphinxcontrib-jsmath==1.0.1",
-	"sphinxcontrib-qthelp==2.0.0",
-	"sphinxcontrib-serializinghtml==2.0.0",
-	"tomli==2.2.1",
-	"typing_extensions==4.14.0",
-	"urllib3==2.5.0",
+  "numpy>=2.2.6",
+  "scipy>=1.15.3",
+  "matplotlib>=3.10.3",
+  "requests>=2.32.4",
+]
+
+[project.optional-dependencies]
+docs = [
+  "sphinx>=8.1.3",
+  "pydata-sphinx-theme>=0.15.4",
+  "sphinx-book-theme>=1.1.4",
+  "numpydoc>=1.9.0",
+  "ghp-import>=2.1.0",
+  "beautifulsoup4>=4.13.4",
 ]
 
 [project.scripts]
