--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -34,7 +34,7 @@ jobs:
         run: | 
           #python -m pip install --upgrade pip
           #pip install -r docs/requirements.txt
-          pip install -e .
+          pip install -e .[docs]
       - name: Build HTML
         run: | 
           cd docs/
